<resources>
    <string name="app_name">User Info</string>
    <string name="species">Species:</string>
    <string name="gender">Gender:</string>
    <string name="house">House:</string>
    <string name="date_of_birth">Date Of Birth:</string>
    <string name="year_of_birth">Year Of Birth:</string>
    <string name="ancestry">Ancestry:</string>
    <string name="eye_colour">Eye Colour:</string>
    <string name="hair_colour">Hair Colour:</string>
    <string name="patronus">Patronus:</string>
    <string name="actor">Actor:</string>
</resources>