<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainColor"
    tools:context=".ui.UserDetailsActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/mainLayout"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/baseInfoLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="8dp"
            android:background="@drawable/bg_round"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">


            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/constraintLayout"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="8dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <com.google.android.material.imageview.ShapeableImageView
                    android:id="@+id/imgActor"
                    android:layout_width="150dp"
                    android:layout_height="150dp"
                    android:scaleType="fitXY"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:src="@drawable/ic_launcher_background"
                    app:shapeAppearanceOverlay="@style/circleImage" />

                <androidx.appcompat.widget.AppCompatTextView
                    android:id="@+id/txtName"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="16dp"
                    android:background="@android:color/transparent"
                    android:fontFamily="sans-serif-light"
                    android:maxLines="1"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    android:textStyle="bold"
                    app:layout_constraintBottom_toBottomOf="parent"
                    app:layout_constraintStart_toEndOf="@id/imgActor"
                    app:layout_constraintTop_toTopOf="parent"
                    tools:text="Name" />
            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/moreDetailesLayout"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_margin="8dp"
            android:background="@drawable/bg_round"
            android:padding="8dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/baseInfoLayout">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvSpeciesTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/species"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtSpecies"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvSpeciesTitle"
                app:layout_constraintStart_toEndOf="@id/tvSpeciesTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvGenderTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/gender"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvSpeciesTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtGender"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvGenderTitle"
                app:layout_constraintStart_toEndOf="@id/tvGenderTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHouseTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/house"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvGenderTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtHouse"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvHouseTitle"
                app:layout_constraintStart_toEndOf="@id/tvHouseTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvDateOfBirthTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/date_of_birth"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHouseTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtDateOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvDateOfBirthTitle"
                app:layout_constraintStart_toEndOf="@id/tvDateOfBirthTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvYearOfBirthTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/year_of_birth"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvDateOfBirthTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtYearOfBirth"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvYearOfBirthTitle"
                app:layout_constraintStart_toEndOf="@id/tvYearOfBirthTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvAncestryTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/ancestry"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvYearOfBirthTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtAncestry"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvAncestryTitle"
                app:layout_constraintStart_toEndOf="@id/tvAncestryTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvEyeColourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/eye_colour"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvAncestryTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtEyeColour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvEyeColourTitle"
                app:layout_constraintStart_toEndOf="@id/tvEyeColourTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvHairColourTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/hair_colour"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvEyeColourTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtHairColour"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvHairColourTitle"
                app:layout_constraintStart_toEndOf="@id/tvHairColourTitle"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvPatronusTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/patronus"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvHairColourTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtPatronus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvPatronusTitle"
                app:layout_constraintStart_toEndOf="@id/tvPatronusTitle"/>

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/tvActorTitle"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="4dp"
                android:padding="8dp"
                android:text="@string/actor"
                android:textColor="@color/white"
                android:textStyle="bold"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/tvPatronusTitle" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/txtActor"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="8dp"
                android:textColor="@color/txtColor"
                app:layout_constraintBaseline_toBaselineOf="@+id/tvActorTitle"
                app:layout_constraintStart_toEndOf="@id/tvActorTitle"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <ProgressBar
        android:id="@+id/pBarLoading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>